# GLSample

./: CMakeLists.txt  README.md  conanfile.txt
shaders/: main.frag  main.vert
src/: main.cpp  shader.h
